--- a/src/components/pages/CourseDetails/CourseDetails.module.css
+++ b/src/components/pages/CourseDetails/CourseDetails.module.css
@@ -1,5 +1,12 @@
 .stickyVideo {
+  z-index: 1;
+  top: 3.5em;
+}
+
+@media (max-width: 768px) {
+  .stickyVideo {
     position: sticky;
-    top: 0;
+    top: 3.5em;
     z-index: 1;
   }
+}
